<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.nomnom.recipes.ui.home.HomeFragment"
        android:label="@string/nav_home"/>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.nomnom.recipes.ui.search.SearchFragment"
        android:label="@string/nav_search"/>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.nomnom.recipes.ui.favorite.FavoriteFragment"
        android:label="@string/nav_favorite"/>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.nomnom.recipes.ui.settings.SettingsFragment"
        android:label="@string/title_settings"/>

</navigation>